<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Constants -->
    <string name="app_name">PowerUp 3.1</string>
    <string name="minus_infinity">-\u221E</string>
    <string name="horizon_limit">I am the last thing in horizon</string>
    <string name="not_available">N/A</string>
    <string name="zero_percent">0%</string>
    <string name="social_share_message">I flew #powerup3 and it was awesome!</string>
    <string name="shareWithPictureMessage">Share PowerUp 3.0 with friends</string>
    <string name="shareWithPictureYes">Add photo</string>
    <string name="shareWithPictureNo">Just text</string>
    <string name="shareWithPictureCancel">Cancel</string>
    <string name="social_share_success">Sharing successful.</string>
    <string name="social_share_picture_problem">Error while taking picture.</string>
    <string name="social_share_title"></string>
    <string name="info_softwareData">Software: unknown</string>
    <string name="info_hardwareData">Hardware: unknown</string>
    <string name="unknown">unknown</string>

    <!-- Accessibility descriptions -->
    <string name="desc_imgPanel">Control Panel</string>
    <string name="desc_throttleLock">Throttle lock</string>
    <string name="desc_throttleSlider">Throttle Slider</string>
    <string name="desc_throttleNeedle">Throttle Needle</string>
    <string name="desc_fuelNeedle">Fuel Needle</string>
    <string name="desc_signalNeedle">Signal Needle</string>
    <string name="desc_imageHorizon">Image Horizon</string>
    <string name="desc_centralRuler">Central Ruler</string>
    <string name="desc_compass">Compass</string>
    <string name="desc_horizonBorder">Windshield border</string>
    <string name="desc_runway">Runway</string>
    <string name="desc_info">App Info</string>
    <string name="desc_atcOff">Air Traffic Control OFF</string>
    <string name="desc_atcOn">Air Traffic Control ON</string>
    <string name="desc_socialShare">Share Button</string>
    <string name="desc_checklist">Checklist</string>
    <string name="desc_shadow_cover">Shadow cover</string>

    <!-- TextViews labels -->
    <string name="label_fuel">FUEL</string>
    <string name="label_signal">SIGNAL</string>
    <string name="label_battery">BATTERY</string>
    <string name="label_signalStrength">dBm</string>
    <string name="label_compass">HDG</string>
    <string name="label_searching_no_modules">Searching…</string>
    <string name="label_searching">Searching for module 1…</string>
    <string name="label_searching2">Searching for module 2…</string>
    <string name="label_connecting">Connecting…</string>
    <string name="label_revRudder">Reverse Rudder</string>
    <string name="label_flightAssist">Flight Assist</string>
    <string name="label_weatherCenter">Weather Center</string>
    <string name="label_settings">Settings</string>
    <string name="label_tower">ATC Tower</string>
    <string name="label_multipleMod">Use 2 Modules</string>
    <string name="label_multiple_left_off">Bind Left</string>
    <string name="label_multiple_left_on">Disconnect Left</string>
    <string name="label_multiple_right_off">Bind Right</string>
    <string name="label_multiple_right_on">Disconnect Right</string>
    <string name="label_multiple_mod_rudder">Control Yaw With Motor Speed</string>
    <string name="label_diagnostics">Diagnostics</string>
    <string name="label_diag_roll_text">Roll</string>
    <string name="label_diag_pitch_text">Pitch</string>
    <string name="label_diag_azimuth_text">Azimuth</string>
    <string name="label_diag_left_motor">Left Motor</string>
    <string name="label_diag_right_motor">Right Motor</string>
    <string name="label_diag_left_system_id">Left Module Serial</string>
    <string name="label_diag_right_system_id">Right Module Serial</string>
    <string name="label_diag_left_battery">Left Battery</string>
    <string name="label_diag_right_battery">Right Battery</string>
    <string name="label_diag_software_version">Software Version</string>
    <string name="label_diag_left_hw_version">Left Module HW. Version</string>
    <string name="label_diag_right_hw_version">Right Module HW. Version</string>

    <!-- Checklist items -->
    <string name="checklist_title">Flight checklist</string>
    <string name="checklist_text">    \ <u>BEFORE TAKEOFF</u>\n  <!-- notice the \ at the beginning -->
        Check Weather Center\n
    Other air traffic\n
    Turn on plane\n
    Connection established\n
    Rudder left/right\n
    Throttle check\n
    Check fuel\n
    Tower on/off\n\n <u>AFTER LANDING</u>\n
    Check fuel\n
    Turn off plane\n\n <u>CHARGING / RE-FUELING</u>\n
    Turn on plane\n
    Plug in cable\n
    Check LED\n</string>
    <string name="title_activity_diagnostics">Diagnostics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
