<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/settings_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/label_settings"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/rudder_setting_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_menu_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/revRudderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_revRudder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Switch
            android:id="@+id/rudderSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:soundEffectsEnabled="true" />
    </RelativeLayout>

    <View
        android:id="@+id/rudder_flAssist_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rudder_setting_item"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:id="@+id/flAssist_setting_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rudder_flAssist_line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/flAssistText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_flightAssist"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Switch
            android:id="@+id/flAssistSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:soundEffectsEnabled="true" />
    </RelativeLayout>

    <View
        android:id="@+id/flAssist_tower_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/flAssist_setting_item"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:id="@+id/tower_setting_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flAssist_tower_line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/towerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tower"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Switch
            android:id="@+id/towerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="true" />
    </RelativeLayout>

    <View
        android:id="@+id/tower_multiple_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tower_setting_item"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:id="@+id/multiple_mod_setting_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tower_multiple_line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/multipleModText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_multipleMod"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Switch
            android:id="@+id/multipleModSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="false" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/multiple_mod_buttons_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiple_mod_setting_item"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ToggleButton
            android:id="@+id/bindLeftButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="false"
            android:textOff="@string/label_multiple_left_off"
            android:textOn="@string/label_multiple_left_on" />

        <ToggleButton
            android:id="@+id/bindRightButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/bindLeftButton"
            android:checked="false"
            android:textOff="@string/label_multiple_right_off"
            android:textOn="@string/label_multiple_right_on" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/multiple_mod_rudder_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiple_mod_buttons_item"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/multiple_mod_rudder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_multiple_mod_rudder"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Switch
            android:id="@+id/multiple_mod_rudder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:checked="false" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/appInfoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:background="@color/dark_green"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgInfo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/desc_info"
            android:src="@drawable/information" />

        <TextView
            android:id="@+id/softwareInfoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/imgInfo"
            android:text="@string/info_softwareData" />

        <TextView
            android:id="@+id/hardwareInfoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/softwareInfoData"
            android:layout_toRightOf="@id/imgInfo"
            android:text="@string/info_hardwareData" />
    </RelativeLayout>
</RelativeLayout>