<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/diag_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/label_diagnostics"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/diag_roll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/diag_menu_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/diag_roll_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_diag_roll_text" />

        <TextView
            android:id="@+id/diag_roll_val_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/diag_pitch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diag_roll_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/diag_pitch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_diag_pitch_text" />

        <TextView
            android:id="@+id/diag_pitch_val_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/diag_azimuth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diag_pitch_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/diag_azimuth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_diag_azimuth_text" />

        <TextView
            android:id="@+id/diag_azimuth_val_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:id="@+id/diag_degree_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/diag_azimuth_layout"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="#c0c0c0" />

    <RelativeLayout
        android:id="@+id/diag_left_motor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diag_degree_line"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/diag_left_motor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_diag_left_motor" />

        <TextView
            android:id="@+id/diag_left_motor_val_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/diag_right_motor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diag_left_motor_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/diag_right_motor_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_diag_right_motor" />

        <TextView
            android:id="@+id/diag_right_motor_val_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</RelativeLayout>
